# DCKP-Matheuristics

./: .gitignore  BCC466-Trabalho.md  CMakeLists.txt  Makefile  main.tex
DCKP-instances/DCKP-instances-set II-6240/C15/: BPPC_1_0_1.txt_0.1  BPPC_1_0_1.txt_0.2  BPPC_1_0_1.txt_0.3  BPPC_1_0_1.txt_0.4  BPPC_1_0_1.txt_0.5  BPPC_1_0_1.txt_0.6  BPPC_1_0_1.txt_0.7  BPPC_1_0_1.txt_0.8  BPPC_1_0_1.txt_0.9  BPPC_1_0_10.txt_0.1  BPPC_1_0_10.txt_0.2  BPPC_1_0_10.txt_0.3  BPPC_1_0_10.txt_0.4  BPPC_1_0_10.txt_0.5  BPPC_1_0_10.txt_0.6  BPPC_1_0_10.txt_0.7  BPPC_1_0_10.txt_0.8  BPPC_1_0_10.txt_0.9  BPPC_1_0_2.txt_0.1  BPPC_1_0_2.txt_0.2  BPPC_1_0_2.txt_0.3  BPPC_1_0_2.txt_0.4  BPPC_1_0_2.txt_0.5  BPPC_1_0_2.txt_0.6  BPPC_1_0_2.txt_0.7  BPPC_1_0_2.txt_0.8  BPPC_1_0_2.txt_0.9  BPPC_1_0_3.txt_0.1  BPPC_1_0_3.txt_0.2  BPPC_1_0_3.txt_0.3  BPPC_1_0_3.txt_0.4  BPPC_1_0_3.txt_0.5  BPPC_1_0_3.txt_0.6  BPPC_1_0_3.txt_0.7  BPPC_1_0_3.txt_0.8  BPPC_1_0_3.txt_0.9  BPPC_1_0_4.txt_0.1  BPPC_1_0_4.txt_0.2  BPPC_1_0_4.txt_0.3  BPPC_1_0_4.txt_0.4  (+670 more)
DCKP-instances/DCKP-instances-set II-6240/R15/: BPPC_1_0_1.txt_0.1  BPPC_1_0_1.txt_0.2  BPPC_1_0_1.txt_0.3  BPPC_1_0_1.txt_0.4  BPPC_1_0_1.txt_0.5  BPPC_1_0_1.txt_0.6  BPPC_1_0_1.txt_0.7  BPPC_1_0_1.txt_0.8  BPPC_1_0_1.txt_0.9  BPPC_1_0_10.txt_0.1  BPPC_1_0_10.txt_0.2  BPPC_1_0_10.txt_0.3  BPPC_1_0_10.txt_0.4  BPPC_1_0_10.txt_0.5  BPPC_1_0_10.txt_0.6  BPPC_1_0_10.txt_0.7  BPPC_1_0_10.txt_0.8  BPPC_1_0_10.txt_0.9  BPPC_1_0_2.txt_0.1  BPPC_1_0_2.txt_0.2  BPPC_1_0_2.txt_0.3  BPPC_1_0_2.txt_0.4  BPPC_1_0_2.txt_0.5  BPPC_1_0_2.txt_0.6  BPPC_1_0_2.txt_0.7  BPPC_1_0_2.txt_0.8  BPPC_1_0_2.txt_0.9  BPPC_1_0_3.txt_0.1  BPPC_1_0_3.txt_0.2  BPPC_1_0_3.txt_0.3  BPPC_1_0_3.txt_0.4  BPPC_1_0_3.txt_0.5  BPPC_1_0_3.txt_0.6  BPPC_1_0_3.txt_0.7  BPPC_1_0_3.txt_0.8  BPPC_1_0_3.txt_0.9  BPPC_1_0_4.txt_0.1  BPPC_1_0_4.txt_0.2  BPPC_1_0_4.txt_0.3  BPPC_1_0_4.txt_0.4  (+670 more)
results/analysis/etapa1/: gap_analysis.csv  metrics.json  performance_profile.csv
results/analysis/etapa1/latex/: table_dominance.tex  table_statistical_tests.tex  table_summary.tex
results/analysis/etapa2/: gap_analysis.csv  metrics.json  performance_profile.csv
results/analysis/etapa2/latex/: table_dominance.tex  table_statistical_tests.tex  table_summary.tex
results/etapa1/: I1-I10_results.csv  results_set1.csv  single_1I1.csv
results/etapa1/analysis/: gap_analysis.csv  method_statistics.csv  method_wins.csv  summary_report.txt
results/etapa2/: results_set1.csv
scripts/: analyze.sh  analyze_results.py  analyze_results_backup.py  build.ps1  build.sh  clean.ps1  clean.sh  run_experiments.ps1  run_experiments.sh  tune_grasp.ps1
src/: main.cpp
src/constructive/: grasp.cpp  grasp.h  greedy.cpp  greedy.h
src/local_search/: hill_climbing.cpp  hill_climbing.h  vnd.cpp  vnd.h
src/utils/: instance_reader.cpp  instance_reader.h  solution.cpp  solution.h  validator.cpp  validator.h
